Fix unnecessary scrollbar

--- a/admin-dev/themes/new-theme/scss/pages/orders/_orders_create.scss
+++ b/admin-dev/themes/new-theme/scss/pages/orders/_orders_create.scss
@@ -2,7 +2,6 @@
   .custom-fields-container {
     max-height: 300px;
     padding-bottom: 0.9375rem;
-    overflow-y: scroll;
 
     .custom-file {
       overflow: hidden;
